fix: Layout issue on iPhone X

--- a/stylus/objects/layouts.styl
+++ b/stylus/objects/layouts.styl
@@ -96,6 +96,7 @@ $app
         main
             padding-left env(safe-area-inset-left)
             padding-right env(safe-area-inset-right)
+            margin-bottom env(safe-area-inset-bottom)
 
         main,
         main > [role=contentinfo], // Deprecated
